  are now analyzed instantly

* added new scripts to build binary releases

* a binary release consists of the following pre-configured LoLAs: lola-full,
  lola-full1, lola-deadlock, lola-deadlock1, lola-modelchecking,
  lola-boundednet, lola-liveprop, lola-liveprop1, lola-statepredicate, and
  lola-statepredicate1

* changed the way tests are run (using GNU Autotest now)

Version 1.12
============

* addressed bug #13538 (`https://gna.org/bugs/?13538'): `make install'
  installs all binaries with the name `lola' or `lola-xxx' for a standard
  configuration `userconfig.H.xxx' that are present in the `src' folder.
  Likewise, `make uninstall' removes all installed binaries with the name
  `lola' or `lola-xxx' for a standard configuration `userconfig.H.xxx'

* adjusted the parser to cope with different line endings (CR, LF, CRLF)

* licensed LoLA under the GNU Affero General Public License (Affero GPL), see
  file `COPYING'

Version 1.11
============

* fixed bug #12903 (`https://gna.org/bugs/?12903'): fixed problems regarding
  `BOUNDEDNET' mode

* fixed bug #12907 (`https://gna.org/bugs/?12907'): fixed problems regarding
  `COVER' option

* completed documentation

* adapted code to avoid deprecation warnings of GCC 4.2

* updated `-h' output

* removed old manual `lola-old.ps' from documentation

* adapted documentation to fix bug #12090 (`https://gna.org/bugs/?12090'):
  syntax description deviated from implementation

* small changes to the test scripts and the lexer to make LoLA compilable on
  FreeBSD

* added a directory `src/configs' containing some example configurations for
  LoLA; for each file `userconfig.H.xxx' in directory `src/configs' exists a
  Makefile target `lola-xxx' which compiles LoLA with that configuration

* added Makefile target `all-configs' to compile all configurations in
  directory `src/configs'

* added maintainer scripts to create source and binary releases; the latter